WexGit/Wex_DX/force-app/main/default/objects/CTI_POP_Settings__c/CTI_POP_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CTI POP Settings</description>
    <label>CTI POP Settings</label>
</CustomObject>