WexGit/Wex_DX/force-app/main/default/objects/CTI_POP_Settings__c/fields/BOSH_URL__c.field-meta.xml
<CustomField>
    <fullName>BOSH_URL__c</fullName>
    <defaultValue>&apos;https://msp-uccx-cs-pub.efs.local:7443/http-bind/&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>BOSH URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>