WexGit/Wex_DX/force-app/main/default/objects/CTI_POP_Settings__c/fields/Default_Component__c.field-meta.xml
<CustomField>
    <fullName>Default_Component__c</fullName>
    <defaultValue>&apos;c__CustomerDetails&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Component</label>
    <length>20</length>
    <type>Text</type>
</CustomField>