WexGit/Wex_DX/force-app/main/default/objects/CTI_POP_Settings__c/fields/Finesse_API_URL__c.field-meta.xml
<CustomField>
    <fullName>Finesse_API_URL__c</fullName>
    <defaultValue>&apos;https://msp-uccx-cs-pub.efs.local:8445/finesse&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Finesse API URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>