WexGit/Wex_DX/force-app/main/default/objects/CTI_POP_Settings__c/fields/Gadget_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Gadget_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Gadget Enabled</label>
    <type>Checkbox</type>
</CustomField>