WexGit/Wex_DX/force-app/main/default/objects/CTI_POP_Settings__c/fields/PopupMinimizeTime__c.field-meta.xml
<CustomField>
    <fullName>PopupMinimizeTime__c</fullName>
    <defaultValue>6000</defaultValue>
    <description>Time in milliseconds to keep popup open</description>
    <label>PopupMinimizeTime</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>