WexGit/Wex_DX/force-app/main/default/objects/CTI_POP_Settings__c/fields/Username_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Username_Suffix__c</fullName>
    <defaultValue>&quot;@msp-uccx-cs-pub.efs.local/sfdc&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Username Suffix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>